--- a/shuffle/pom.xml
+++ b/shuffle/pom.xml
@@ -24,7 +24,7 @@
       <groupId>org.bukkit</groupId>
       <artifactId>bukkit</artifactId>
       <!-- Bukkit API Version, change if out dated -->
-      <version>1.1-R8</version>
+      <version>1.4.2-R0.3-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
     <!-- Following dependency is provided by CraftBukkit -->
